@@ -1,3 +1,7 @@
+2007-05-27  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* Added automatic bt channel selection
+
 2006-07-03  Christian W. Zuckschwerdt  <zany@triq.net>
 
 	* Removed statfs (caused problems on all but Siemens)
